--- a/Blog.DAL/Blog.DAL.csproj
+++ b/Blog.DAL/Blog.DAL.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ORM\Context\ProjectContext.cs" />
     <Compile Include="ORM\Entity\AppUser.cs" />
     <Compile Include="ORM\Entity\Article.cs" />
