--- a/Blog.UI/Blog.UI.csproj
+++ b/Blog.UI/Blog.UI.csproj
@@ -113,6 +113,16 @@
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Blog.BLL\Blog.BLL.csproj">
+      <Project>{221c1804-bdf8-4cf7-afb1-20bb3815b7ab}</Project>
+      <Name>Blog.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Blog.DAL\Blog.DAL.csproj">
+      <Project>{3dd8926e-f85c-4ede-b60a-0f8ff52bb855}</Project>
+      <Name>Blog.DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
