--- a/Blog.BLL/Blog.BLL.csproj
+++ b/Blog.BLL/Blog.BLL.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Repository\CategoryRepository.cs" />
     <Compile Include="Repository\CommentRepository.cs" />
     <Compile Include="Repository\LikeRepository.cs" />
+    <Compile Include="Service\EntityService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -66,8 +67,6 @@
       <Name>Blog.DAL</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Service\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
